Better tests.  More logging.  More TODOs.